# fine_tune_llm

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  PROGRESS_SUMMARY.md  README.md  docker-compose.yml  pytest.ini  test_audit.jsonl
backups/god_classes/: high_stakes_audit_metadata_20250814_114527.json  high_stakes_audit_metadata_20250814_121039.json
birdflu-ensemble/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
birdflu-ensemble/api/: server.py
birdflu-ensemble/arbiter/: conformal.py  features.py  stacker_lr.py
birdflu-ensemble/cache/: prediction_cache.py
birdflu-ensemble/ci/: promotion_gate.yml  rule_tests.yml  safety_set_eval.yml
birdflu-ensemble/configs/: conformal.yaml  labels.yaml  llm_lora.yaml  slices.yaml  voters.yaml
birdflu-ensemble/dashboard/: app.py
birdflu-ensemble/database/: models.py
birdflu-ensemble/dsl/: engine.py  rules.yaml
birdflu-ensemble/eval/: metrics.py
birdflu-ensemble/experiments/: mlflow_tracking.py
birdflu-ensemble/lfs/: registry.py
birdflu-ensemble/miner/: disagreement.py
birdflu-ensemble/monitoring/: metrics.py
birdflu-ensemble/scripts/: eval_full_system.py  infer_model.py  merge_lora.py  tune_hyperparams.py
birdflu-ensemble/security/: input_sanitizer.py
birdflu-ensemble/tests/: conftest.py  test_dsl_engine.py
birdflu-ensemble/validation/: drift_detection.py
birdflu-ensemble/voters/classical/: calibrate.py  tfidf_lr.py  tfidf_svm.py
birdflu-ensemble/voters/llm/: dataset.py  infer.py  sft_lora.py
birdflu-ensemble/voters/regex_voter/: predict.py
birdflu-ensemble/voters/ws_label_model/: snorkel_like.py
fine_tune_llm/: IMPLEMENTATION_ROADMAP.md  Makefile  README.md  pyproject.toml  pytest_windows.ini  setup_windows_env.py  test_audit.jsonl  test_windows.bat  test_windows.ps1  ui.py
fine_tune_llm/apps/: __init__.py
fine_tune_llm/apps/train/: __init__.py  train_lora_sft.py
fine_tune_llm/apps/ui/: main.py
fine_tune_llm/configs/: llm_lora.yaml
fine_tune_llm/scripts/: __init__.py  infer_model.py  launch_risk_ui.py  prepare_data.py  risk_prediction_ui.py  run_dashboard.py  train_high_stakes.py  train_precision_optimized.py
fine_tune_llm/src/fine_tune_llm/: __init__.py
fine_tune_llm/src/fine_tune_llm/config/: __init__.py  manager.py
fine_tune_llm/src/fine_tune_llm/evaluation/: __init__.py
fine_tune_llm/src/fine_tune_llm/inference/: __init__.py
fine_tune_llm/src/fine_tune_llm/models/: __init__.py
fine_tune_llm/src/fine_tune_llm/monitoring/: __init__.py
fine_tune_llm/src/fine_tune_llm/training/: __init__.py
fine_tune_llm/src/fine_tune_llm/utils/: __init__.py
fine_tune_llm/tests/: __init__.py  conftest.py  test_abstention_loss.py  test_advanced_features_integration.py  test_cross_module_integration.py  test_dataset.py  test_evaluate.py  test_high_stakes_simple.py  test_infer_model.py  test_llm_infer.py  test_pipeline_integration.py  test_risk_prediction_ui.py  test_ui.py
fine_tune_llm/tests/suites/: README.md  core_suite.py  ml_suite.py  run_all_suites.py  scripts_suite.py
fine_tune_llm/tests_new/: __init__.py
fine_tune_llm/tests_new/unit/: __init__.py
fine_tune_llm/voters/: __init__.py
fine_tune_llm/voters/llm/: __init__.py  conformal.py  dashboard.py  dashboard_facade.py  data_efficiency.py  dataset.py  evaluate.py  evaluate_facade.py  fact_check.py  high_stakes_audit.py  infer.py  metrics.py  moa.py  moe.py  precision_optimizers.py  safety_domain.py  sft_lora.py  sft_lora_facade.py  uncertainty.py  utils.py
scripts/: consolidation_analysis.py  train.py
src/fine_tune_llm/: __init__.py  _version.py
src/fine_tune_llm/adapters/: api.py  (+4 more)
tests/: __init__.py  conftest.py  test_registry.py
tests/analysis/: functionality_mapper.py
tests/analysis_reports/: advancedhighstakesauditor_functionality_map.json  comprehensive_functionality_analysis.json  enhancedlorasfttrainer_functionality_map.json  functionality_analysis_summary.md  llmevaluator_functionality_map.json  trainingdashboard_functionality_map.json
tests/baseline/: __init__.py  create_baseline_reports.py  test_god_class_baseline.py
tests/baseline_reports/: advancedhighstakesauditor_baseline_report.json  baseline_summary.md  comprehensive_baseline_report.json  enhancedlorasfttrainer_baseline_report.json  llmevaluator_baseline_report.json  trainingdashboard_baseline_report.json
tests/compatibility/: test_backwards_compatibility_suite.py
tests/consolidation_reports/: consolidation_analysis.json  consolidation_plan.json  consolidation_summary.md
tests/equivalence/: __init__.py  test_functional_equivalence.py
tests/error_conditions/: test_error_condition_framework.py
tests/framework/: test_runner.py
tests/integration/: test_component_interactions.py  test_configuration_integration.py  test_database_integration.py  test_external_dependencies.py  test_external_service_integration.py  test_integration.py
tests/load_performance/: test_load_performance_suite.py
tests/mocks/: __init__.py  external_services.py  infrastructure_mocks.py  model_mocks.py  test_fixtures.py
tests/performance/: test_performance_regression.py  test_resource_usage_validation.py
tests/security/: test_security_validation_suite.py
tools/: god_class_backup.py
(+143 files in other folders)
